REOPENED266239
touching the webview doesn't focus it
https://bugs.webkit.org/show_bug.cgi?id=266239
Summary touching the webview doesn't focus it
two
Reported 2023-12-11 10:51:15 PST
1. touch the address bar 2. touch some text input in the web view keyboard focus is still in the address bar, even though the text input might be partially highlighted
Attachments
two
Comment 1 2023-12-11 10:57:03 PST
WebKitGTK 2.42.3
EWS
Comment 2 2025-05-09 14:56:57 PDT
Committed 294734@main (99636012a84e): <https://commits.webkit.org/294734@main> Reviewed commits have been landed. Closing PR #45177 and removing active labels.
Michael Catanzaro
Comment 3 2025-05-14 12:07:39 PDT
Reopened Bugzilla. Should not need a new gesture, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=293003.
Note You need to log in before you can comment on or make changes to this bug.