[GTK] Add click gesture to focus web view https://bugs.webkit.org/show_bug.cgi?id=266239

Reviewed by Michael Catanzaro.

* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTouchPressed):
(webkitWebViewBaseConstructed):

Canonical link: https://commits.webkit.org/294734@main